@@ -2,8 +2,13 @@ package it.pagopa.selfcare.user.service;
 
 import io.smallrye.mutiny.Multi;
 import io.smallrye.mutiny.Uni;
+import io.smallrye.mutiny.infrastructure.Infrastructure;
 import it.pagopa.selfcare.onboarding.common.PartyRole;
+import it.pagopa.selfcare.product.entity.Product;
+import it.pagopa.selfcare.product.service.ProductService;
 import it.pagopa.selfcare.user.constant.OnboardedProductState;
+import it.pagopa.selfcare.user.mapper.UserMapper;
+import it.pagopa.selfcare.user.model.LoggedUser;
 import it.pagopa.selfcare.user.controller.response.UserInstitutionResponse;
 import it.pagopa.selfcare.user.controller.response.UserProductResponse;
 import it.pagopa.selfcare.user.controller.response.UserResponse;
@@ -15,7 +20,7 @@ import it.pagopa.selfcare.user.exception.InvalidRequestException;
 import it.pagopa.selfcare.user.exception.ResourceNotFoundException;
 import it.pagopa.selfcare.user.mapper.OnboardedProductMapper;
 import it.pagopa.selfcare.user.mapper.UserInstitutionMapper;
-import it.pagopa.selfcare.user.mapper.UserMapper;
+import it.pagopa.selfcare.user.model.notification.PrepareNotificationData;
 import it.pagopa.selfcare.user.model.notification.UserNotificationToSend;
 import it.pagopa.selfcare.user.util.UserUtils;
 import jakarta.enterprise.context.ApplicationScoped;
@@ -25,32 +30,36 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.eclipse.microprofile.rest.client.inject.RestClient;
 import org.openapi.quarkus.user_registry_json.api.UserApi;
+import org.openapi.quarkus.user_registry_json.model.UserResource;
+import org.openapi.quarkus.user_registry_json.model.UserSearchDto;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static it.pagopa.selfcare.user.constant.CustomError.*;
 import static it.pagopa.selfcare.user.util.GeneralUtils.formatQueryParameterList;
 import static it.pagopa.selfcare.user.util.UserUtils.VALID_USER_PRODUCT_STATES_FOR_NOTIFICATION;
 
-@RequiredArgsConstructor
-@ApplicationScoped
 @Slf4j
+@ApplicationScoped
+@RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
 
     @RestClient
     @Inject
     private UserApi userRegistryApi;
 
+    private final UserMapper userMapper;
     private final OnboardedProductMapper onboardedProductMapper;
     private final UserUtils userUtils;
     private final UserInstitutionService userInstitutionService;
     private final UserInstitutionMapper userInstitutionMapper;
-    private final UserMapper userMapper;
+
+    private final UserNotificationService userNotificationService;
+    private final ProductService productService;
 
     private static final String WORK_CONTACTS = "workContacts";
 
@@ -120,7 +129,7 @@ public class UserServiceImpl implements UserService {
                     return new ResourceNotFoundException(String.format(USER_NOT_FOUND_ERROR.getMessage(), userId), USER_NOT_FOUND_ERROR.getCode());
                 })
                 .onItem().transformToUni(userInstitution -> userRegistryApi.findByIdUsingGET(USERS_WORKS_FIELD_LIST, userInstitution.getUserId())
-                .map(userResource -> userMapper.toUserResponse(userResource, userInstitution.getUserMailUuid())))
+                        .map(userResource -> userMapper.toUserResponse(userResource, userInstitution.getUserMailUuid())))
                 .onFailure(UserUtils::checkIfNotFoundException).transform(t -> new ResourceNotFoundException(String.format(USER_NOT_FOUND_ERROR.getMessage(), userId), USER_NOT_FOUND_ERROR.getCode()));
     }
 
@@ -156,7 +165,7 @@ public class UserServiceImpl implements UserService {
         var userInstitutionFilters = UserInstitutionFilter.builder().userId(formatQueryParameterList(userIds)).build().constructMap();
         return userInstitutionService.findAllWithFilter(userUtils.retrieveMapForFilter(userInstitutionFilters))
                 .collect()
-                .asList().onItem().transform(userInstitutions -> userInstitutions.stream().map(userInstitutionMapper::toResponse).collect(Collectors.toList()));
+                .asList().onItem().transform(userInstitutions -> userInstitutions.stream().map(userInstitutionMapper::toResponse).toList());
     }
 
     @Override
@@ -179,6 +188,69 @@ public class UserServiceImpl implements UserService {
                     }
                     return Uni.createFrom().nullItem();
                 });
+    }
+    
+    @Override
+    public Uni<UserResource> getUserById(String userId) {
+        return userRegistryApi.findByIdUsingGET(USERS_WORKS_FIELD_LIST, userId);
+    }
+
+    @Override
+    public Uni<UserResource> searchUserByFiscalCode(String fiscalCode) {
+        return userRegistryApi.searchUsingPOST(USERS_FIELD_LIST_WITHOUT_FISCAL_CODE, new UserSearchDto(fiscalCode));
+    }
+
+    /**
+     * The updateUserProductStatus method in the UserServiceImpl class is responsible for updating the status of a user's product and sending notifications about this update.
+     * it calls the updateUserStatusWithOptionalFilter method to update the user's product status on UserInstitution collection.
+     * After the status update, the method retrieves the user's data from the user registry and adds it to the PrepareNotificationDataBuilder.
+     * Then, it retrieves the user's institution data from UserInstitituion Collection.
+     * After that, it retrieves the product data.
+     * Once all the necessary data is retrieved and added to the PrepareNotificationDataBuilder, which is used to build the data needed for sending notifications.
+     * Next, it sends an email notification about the status update.
+     * Then, it builds a UserNotificationToSend to send a Kafka notification about the status update.
+     */
+    @Override
+    public Uni<Void> updateUserProductStatus(String userId, String institutionId, String productId, OnboardedProductState status, LoggedUser loggedUser) {
+        PrepareNotificationData.PrepareNotificationDataBuilder prepareNotificationDataBuilder = PrepareNotificationData.builder();
+        return updateUserStatusWithOptionalFilter(userId, institutionId, productId, null, null, status)
+                .onItem().transformToUni(unused -> retrieveUserFromUserRegistryAndAddToPrepareNotificationData(prepareNotificationDataBuilder, userId))
+                .onItem().transformToUni(builder -> retrieveUserInstitutionAndAddToPrepareNotificationData(builder, userId, institutionId))
+                .onItem().transformToUni(builder -> retrieveProductAndAddToPrepareNotificationData(builder, productId))
+                .onItem().transform(PrepareNotificationData.PrepareNotificationDataBuilder::build)
+                .onItem().transformToUni(prepareNotificationData -> userNotificationService.sendEmailNotification(prepareNotificationData.getUserResource(), prepareNotificationData.getUserInstitution(), prepareNotificationData.getProduct(), status, loggedUser.getName(), loggedUser.getFamilyName())
+                        .onFailure().recoverWithNull()
+                        .replaceWith(prepareNotificationData))
+                .onItem().transform(prepareNotificationData -> userUtils.buildUserNotificationToSend(prepareNotificationData.getUserInstitution(), prepareNotificationData.getUserResource(), productId, status))
+                .onItem().call(userNotificationToSend -> userNotificationService.sendKafkaNotification(userNotificationToSend, userId))
+                .onFailure().invoke(x -> log.error("Error during update user status for userId: {}, institutionId: {}, productId:{} -> exception: {}", userId, institutionId, productId, x.getMessage(), x))
+                .replaceWithVoid();
+    }
+
+    private Uni<PrepareNotificationData.PrepareNotificationDataBuilder> retrieveProductAndAddToPrepareNotificationData(PrepareNotificationData.PrepareNotificationDataBuilder builder, String productId) {
+        return Uni.createFrom().item(productService.getProduct(productId))
+                .runSubscriptionOn(Infrastructure.getDefaultWorkerPool())
+                .onItem().transform(builder::product);
+    }
+
+
+    private Uni<PrepareNotificationData.PrepareNotificationDataBuilder> retrieveUserInstitutionAndAddToPrepareNotificationData(PrepareNotificationData.PrepareNotificationDataBuilder builder, String userId, String institutionId) {
+        var userInstitutionFilters = UserInstitutionFilter.builder().userId(userId).institutionId(institutionId).build().constructMap();
+        return userInstitutionService.retrieveFirstFilteredUserInstitution(userInstitutionFilters)
+                .onItemOrFailure().transformToUni((userInstitution, throwable) -> {
+                    if (throwable != null) {
+                        log.error(String.format(USER_NOT_FOUND_ERROR.getMessage(), userId));
+                        return Uni.createFrom().failure(new ResourceNotFoundException(String.format(USER_NOT_FOUND_ERROR.getMessage(), userId), USER_NOT_FOUND_ERROR.getCode()));
+                    }
+                    builder.userInstitution(userInstitution);
+                    return Uni.createFrom().item(userInstitution);
+                })
+                .replaceWith(builder);
+    }
+
+    private Uni<PrepareNotificationData.PrepareNotificationDataBuilder> retrieveUserFromUserRegistryAndAddToPrepareNotificationData(PrepareNotificationData.PrepareNotificationDataBuilder prepareNotificationDataBuilder, String userId) {
+        return userRegistryApi.findByIdUsingGET(USERS_WORKS_FIELD_LIST, userId)
+                .onItem().transform(prepareNotificationDataBuilder::userResource);
     }
 
     @Override
